# aoc2021

./: Day1.thy  Justfile  README.md  ROOT  aoc.cabal
day1/: .gitignore  Justfile  Main.hs  aoc.cabal  shell.nix
day10/: shell.nix
day10/src/: main.zig
day11/: day11.py
day12/: part1.pl  part2.pl  shell.nix
day13/: day13.py
day14/: part1.py  part2.py
day15/src/: main.rs
day16/: Cargo.toml
day16/src/: main.rs
day2/: Justfile  Main.hs  shell.nix
day3/: Justfile  day3.asm  part2.sh  shell.nix
day4/: day4.py
day5/: day5.dats  day5.factor  day5_dats  shell.nix
day6/: day6.jq  shell.nix
day7/: day7.c
day8/: part1.retina  part2.pyth
day9/: day9.py
io/: Day1.hs  Day2.hs
