cabal-version:      2.4
name:               aoc
version:            0.1.0.0
author:             Jakub Kądziołka
maintainer:         kuba@kadziolka.net

executable day1
    main-is:          Main.hs
    other-modules:    Verified.Day1
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   ., export/AoC.Day1/code
    default-language: Haskell2010
